# inmoov_ros

./: rospy
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/: libchomp_planner_plugin.so.0.9.7  libcollision_detector_hybrid_plugin.so.0.9.7  libmoveit_background_processing.so.0.9.7  libmoveit_collision_detection.so.0.9.7  libmoveit_collision_detection_fcl.so.0.9.7  libmoveit_collision_distance_field.so.0.9.7  libmoveit_collision_plugin_loader.so.0.9.7  libmoveit_common_planning_interface_objects.so.0.9.7  libmoveit_constraint_sampler_manager_loader.so.0.9.7  libmoveit_constraint_samplers.so.0.9.7  libmoveit_controller_manager_example.so.0.9.7  libmoveit_default_planning_request_adapter_plugins.so.0.9.7  libmoveit_depth_image_octomap_updater.so.0.9.7  libmoveit_depth_image_octomap_updater_core.so.0.9.7  libmoveit_distance_field.so.0.9.7  libmoveit_dynamics_solver.so.0.9.7  libmoveit_exceptions.so.0.9.7  libmoveit_fake_controller_manager.so.0.9.7  libmoveit_kdl_kinematics_plugin.so.0.9.7  libmoveit_kinematic_constraints.so.0.9.7  libmoveit_kinematics_base.so.0.9.7  libmoveit_kinematics_metrics.so.0.9.7  libmoveit_kinematics_plugin_loader.so.0.9.7  libmoveit_lazy_free_space_updater.so.0.9.7  libmoveit_lma_kinematics_plugin.so.0.9.7  libmoveit_mesh_filter.so.0.9.7  libmoveit_motion_planning_rviz_plugin.so.0.9.7  libmoveit_motion_planning_rviz_plugin_core.so.0.9.7  libmoveit_move_group_capabilities_base.so.0.9.7  libmoveit_move_group_default_capabilities.so.0.9.7  libmoveit_move_group_interface.so.0.9.7  libmoveit_move_group_pick_place_capability.so.0.9.7  libmoveit_occupancy_map_monitor.so.0.9.7  libmoveit_ompl_interface.so.0.9.7  libmoveit_ompl_planner_plugin.so.0.9.7  libmoveit_pick_place_planner.so.0.9.7  libmoveit_plan_execution.so.0.9.7  libmoveit_planners_chomp.so.0.9.7  libmoveit_planning_interface.so.0.9.7  libmoveit_planning_pipeline.so.0.9.7  (+34 more)
src/: .rosinstall  .rosinstall.bak
src/checkerboard_detector/: checkerboard_detector.launch  package.xml
src/gspeech/: CMakeLists.txt
src/inmoov_description/: urdf.rviz  urdf_base.rviz  urdf_moveit.rviz
src/inmoov_firmware/: TeensyServo.cpp  configuration.h  eeprom.h  inmoov_firmware.h  inmoov_firmware.ino  rosServo.cpp  rosServo.h
src/inmoov_ikfast_l_arm_plugin/: CMakeLists.txt  (+2 more)
src/inmoov_leapmotion/: CMakeLists.txt  LeapPublisher.py  LeapSubscriber.py  test.py
src/inmoov_leapmotion/src/: inmoov_leap.cpp
src/inmoov_leapmotion/src/LeapSDK/samples/: Sample  Sample.cpp
src/inmoov_msgs/: CMakeLists.txt
src/inmoov_msgs/msg/: MotorCommand.msg  MotorStatus.msg  NeoPixel.msg  NeoPixel_command.msg  ServoSetup.msg  Status.msg
src/inmoov_msgs/srv/: MotorParameter.srv  NeoPixelSetBrightness.srv  RPS.srv  RequestStatus.srv  inmoov_sound_play.srv  inmoov_voice.srv
src/ros_hue_msgs/: CMakeLists.txt
src/ros_hue_msgs/msg/: huecommand.msg
src/rosie_setup/: CMakeLists.txt  package.xml  robot_full.launch  robot_withVoiceReg.launch
src/rosie_setup/src/: .ear.cpp.swp  main.cpp  main.h
(+1707 files in other folders)
